--- a/prestarocket/_dev/css/partials/_commons.scss
+++ b/prestarocket/_dev/css/partials/_commons.scss
@@ -126,6 +126,8 @@ h1,.h1{
   left: 0;
   width: 100%;
   height: 100%;
+}
+.rc > a {
   display: block;
 }
 .ratio2_1{
